fix: feature item margin bottom on tablet and above

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1216,6 +1216,9 @@ em {
   .features__header {
     max-width: initial;
   }
+  .features__list > *:not(:last-child) {
+    margin-bottom: var(--space-lg);
+  }
 }
 
 @media screen and (min-width: 1024px) {
